2015-11-27  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_features): Add "fp16".
	* doc/c-aarch64.texi (Architecture Extensions): Add "fp16".

2015-11-19  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c (arm_archs): Add "armv8.2-a".
	* doc/c-arm.texi (-march): Add "armv8.2-a".

2015-11-19  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_archs): Add "armv8.2-a".
	* doc/c-aarch64.texi (-march): Likewise.

2015-07-16  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c (arm_fpus): Add crypto-neon-fp-armv8.1.
	* doc/c-arm.texi (-mfpu=): Likewise.  Correct the entry for
	neon-fp-armv8.1.

2015-06-04  Matthew Wahab  <matthew.wahab@arm.com>

	* NEWS: Mention ARMv8.1 support in the Aarch64 port.
	* config/tc-aarch64.c (aarch64_arch_option_table): Add "armv8.1-a".
	* doc/c-aarch64.texi (-march): Add "armv8.1-a".

2015-06-03  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c (arm_archs): Add "armv8.1-a".
	* doc/c-arm.texi (ARM Options, -march): Add "armv8.1-a".
	* NEWS: Mention ARMv8.1 support.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-arm.c (arm_ext_pan): New.
	(do_setpan): New, encode an ARM SETPAN instruction.
	(do_t_setpan): New, encode a Thumb SETPAN instruction.
	(insns): Add "setpan".
	(arm_extensions): Add "pan".
	* doc/c-arm.texi (ARM Options): Add "pan" to list of -mcpu processor
	extensions.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_features): Add "rdma".
	* doc/c-aarch64.texi (AArch64 Extensions): Add "rdma".

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (aarch64_features): Add "lor".
	* doc/c-aarch64.c (Aarch64 Extensions): Add "lor" to list of
	architecture extensions.

2015-06-01  Matthew Wahab  <matthew.wahab@arm.com>

	* config/tc-aarch64.c (parse_sys_reg): New parameter.  Check target
	support.  Fix whitespace.
	(parse_operands): Update for parse_sys_reg changes.